Bug 446737 - "Edit selection" tool options does not dynamically update
Summary: "Edit selection" tool options does not dynamically update
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Selection (other bugs)
Version First Reported In: 5.0.0-beta5
Platform: Manjaro Linux
: NOR minor
Target Milestone: ---
Assignee: Dmitry Kazakov
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-12-09 15:52 UTC by spamless.9v5xj
Modified: 2021-12-20 14:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Illustrative picture depicting what issue is (303.58 KB, image/png)
2021-12-09 15:52 UTC, spamless.9v5xj
Details

Note You need to log in before you can comment on or make changes to this bug.
Description spamless.9v5xj 2021-12-09 15:52:27 UTC
Created attachment 144396 [details]
Illustrative picture depicting what issue is

SUMMARY
***
Using edit selection mode, moving and changing the dimensions of one's selection does not update the values in the "Tool Options" panel
***

STEPS TO REPRODUCE
1.  Select either the Rectangular or the Elliptical selection tool.
2.  Draw a rectangle or ellipse
3.  On the top bar, click on Select -> Edit selection to enter Edit selection mode. "Tool options" should be automatically jumped to by the app.
4. Move or alter the dimensions of the selection.

OBSERVED RESULT

Under the "Tool options", the Geometry is static.

EXPECTED RESULT

Geometry under "Tool options" should update X/Y as the user changes the selection on canvas.
Comment 1 Ahab Greybeard 2021-12-10 18:49:56 UTC
I can Confirm that this happens with the 5.0.0-beta 1 appimage all through to the Dec 10 5.1.0-prealpha (gitae98fd) appimage.
It does not happen with the 4.4.8 appimage hence regression w.r.t. 4.4.8.

Using the Select Shapes tool to alter a rectangular vector selection via Edit Selection, node movement does not alter the numerical values in the Tool Options docker. If Return is then pressed (switching to the Edit Shapes tool) and the Select Shapes tool is then reselected, the numerical values have been updated.
Altering the numerical values in the Tool Options docker immediately changes those values for the rectangle selection.

This is the case for all forms of vector selection.

Vector shapes are not affected by this problem, which is with a vector selections.
Comment 2 Dmitry Kazakov 2021-12-20 09:01:14 UTC
The bug has been fixed in https://invent.kde.org/graphics/krita/commit/ded8c1ae1f43597639a4fa20a44e57327e7ff893
Comment 3 Dmitry Kazakov 2021-12-20 14:49:21 UTC
Git commit 845fa1fb2f17e3709782fab75c7cbd45312d50f1 by Dmitry Kazakov.
Committed on 20/12/2021 at 08:55.
Pushed by dkazakov into branch 'master'.

Fix updates of the Tool Options widget when modifying selection

M  +5    -0    libs/flake/KoShapeManager.cpp
M  +8    -0    libs/flake/KoShapeManager.h
M  +1    -0    libs/ui/flake/kis_shape_selection_canvas.cpp

https://invent.kde.org/graphics/krita/commit/845fa1fb2f17e3709782fab75c7cbd45312d50f1
Comment 4 Dmitry Kazakov 2021-12-20 14:49:49 UTC
Git commit 7140cf8ed696a8569c9398dbc86a41ef66710165 by Dmitry Kazakov.
Committed on 20/12/2021 at 08:58.
Pushed by dkazakov into branch 'krita/5.0'.

Fix updates of the Tool Options widget when modifying selection
(cherry picked from commit 845fa1fb2f17e3709782fab75c7cbd45312d50f1)

M  +5    -0    libs/flake/KoShapeManager.cpp
M  +8    -0    libs/flake/KoShapeManager.h
M  +1    -0    libs/ui/flake/kis_shape_selection_canvas.cpp

https://invent.kde.org/graphics/krita/commit/7140cf8ed696a8569c9398dbc86a41ef66710165