Fix updates of the Tool Options widget when modifying selection

BUG:446737